--- a/ProtoV1/ProtoV1/ProtoV1.csproj
+++ b/ProtoV1/ProtoV1/ProtoV1.csproj
@@ -45,10 +45,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -128,6 +134,42 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Asiakasluokittelu.cs">
+      <DependentUpon>Seniorit.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Asiakastapahtumat.cs">
+      <DependentUpon>Seniorit.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\AsiakkaanPerustiedot.cs">
+      <DependentUpon>Seniorit.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Laskutustiedot.cs">
+      <DependentUpon>Seniorit.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Logins.cs">
+      <DependentUpon>Seniorit.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Postitoimipaikat.cs">
+      <DependentUpon>Seniorit.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Seniorit.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Seniorit.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Seniorit.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Seniorit.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Seniorit.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Seniorit.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sysdiagrams.cs">
+      <DependentUpon>Seniorit.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -139,8 +181,25 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\Seniorit.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Seniorit.Context.cs</LastGenOutput>
+      <DependentUpon>Seniorit.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\Seniorit.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Seniorit.edmx</DependentUpon>
+      <LastGenOutput>Seniorit.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="Models\Seniorit.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Seniorit.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\Seniorit.edmx.diagram">
+      <DependentUpon>Seniorit.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -173,7 +232,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -187,6 +245,9 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
