--- a/ProtoV1/ProtoV1/ProtoV1.csproj
+++ b/ProtoV1/ProtoV1/ProtoV1.csproj
@@ -45,13 +45,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
@@ -126,6 +128,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AsiakasluokitteluController.cs" />
     <Compile Include="Controllers\AsiakastapahtumatController.cs" />
     <Compile Include="Controllers\AsiakastiedotController.cs" />
     <Compile Include="Controllers\EtusivuController.cs" />
@@ -135,37 +138,40 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Asiakasluokittelu.cs">
-      <DependentUpon>Seniorit.tt</DependentUpon>
+      <DependentUpon>SenioritModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Asiakastapahtumat.cs">
-      <DependentUpon>Seniorit.tt</DependentUpon>
+      <DependentUpon>SenioritModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\AsiakkaanPerustiedot.cs">
-      <DependentUpon>Seniorit.tt</DependentUpon>
+      <DependentUpon>SenioritModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Laskutustiedot.cs">
-      <DependentUpon>Seniorit.tt</DependentUpon>
+      <DependentUpon>SenioritModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Logins.cs">
-      <DependentUpon>Seniorit.tt</DependentUpon>
+      <DependentUpon>SenioritModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Postitoimipaikat.cs">
-      <DependentUpon>Seniorit.tt</DependentUpon>
+      <DependentUpon>SenioritModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Seniorit.Context.cs">
+    <Compile Include="Models\SenioritModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Seniorit.Context.tt</DependentUpon>
+      <DependentUpon>SenioritModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Seniorit.cs">
+    <Compile Include="Models\SenioritModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Seniorit.tt</DependentUpon>
+      <DependentUpon>SenioritModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Seniorit.Designer.cs">
+    <Compile Include="Models\SenioritModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Seniorit.edmx</DependentUpon>
+      <DependentUpon>SenioritModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\sysdiagrams.cs">
+      <DependentUpon>SenioritModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -178,24 +184,24 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Models\Seniorit.Context.tt">
+    <Content Include="Models\SenioritModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Seniorit.Context.cs</LastGenOutput>
-      <DependentUpon>Seniorit.edmx</DependentUpon>
+      <LastGenOutput>SenioritModel.Context.cs</LastGenOutput>
+      <DependentUpon>SenioritModel.edmx</DependentUpon>
     </Content>
-    <Content Include="Models\Seniorit.tt">
+    <Content Include="Models\SenioritModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Seniorit.edmx</DependentUpon>
-      <LastGenOutput>Seniorit.cs</LastGenOutput>
+      <DependentUpon>SenioritModel.edmx</DependentUpon>
+      <LastGenOutput>SenioritModel.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <EntityDeploy Include="Models\Seniorit.edmx">
+    <EntityDeploy Include="Models\SenioritModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Seniorit.Designer.cs</LastGenOutput>
+      <LastGenOutput>SenioritModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Models\Seniorit.edmx.diagram">
-      <DependentUpon>Seniorit.edmx</DependentUpon>
+    <Content Include="Models\SenioritModel.edmx.diagram">
+      <DependentUpon>SenioritModel.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -226,6 +232,7 @@
     <Content Include="Views\Asiakastiedot\Index.cshtml" />
     <Content Include="Views\Asiakastapahtumat\Index.cshtml" />
     <Content Include="Views\Laskutustiedot\Index.cshtml" />
+    <Content Include="Views\Asiakasluokittelu\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
