--- a/ProtoV1/ProtoV1/Web.config
+++ b/ProtoV1/ProtoV1/Web.config
@@ -6,7 +6,8 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -57,9 +58,12 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SenioritEntities" connectionString="metadata=res://*/Models.Seniorit.csdl|res://*/Models.Seniorit.ssdl|res://*/Models.Seniorit.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-FPIQRNQ9\SQLEXSANNARA;initial catalog=Seniorit;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SenioritEntities" connectionString="metadata=res://*/Models.SenioritModel.csdl|res://*/Models.SenioritModel.ssdl|res://*/Models.SenioritModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-1FDNLTQQ\SQLEXPRESS;initial catalog=Seniorit;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
 </configuration>
