--- a/ProtoV1/ProtoV1/ProtoV1.csproj
+++ b/ProtoV1/ProtoV1/ProtoV1.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Controllers\EtusivuController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LaskutustiedotController.cs" />
+    <Compile Include="Controllers\LoginsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -233,6 +234,7 @@
     <Content Include="Views\Asiakastapahtumat\Index.cshtml" />
     <Content Include="Views\Laskutustiedot\Index.cshtml" />
     <Content Include="Views\Asiakasluokittelu\Index.cshtml" />
+    <Content Include="Views\Logins\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
