--- a/.gitignore
+++ b/.gitignore
@@ -256,6 +256,9 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
+# Web.Config (Connection String/sensitive data)
+Web.config
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
