--- a/ProtoV1/ProtoV1/ProtoV1.csproj
+++ b/ProtoV1/ProtoV1/ProtoV1.csproj
@@ -235,6 +235,7 @@
     <Content Include="Views\Laskutustiedot\Index.cshtml" />
     <Content Include="Views\Asiakasluokittelu\Index.cshtml" />
     <Content Include="Views\Logins\Index.cshtml" />
+    <Content Include="Views\Asiakastapahtumat\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
