--- a/ProtoV1/ProtoV1/ProtoV1.csproj
+++ b/ProtoV1/ProtoV1/ProtoV1.csproj
@@ -236,6 +236,7 @@
     <Content Include="Views\Asiakasluokittelu\Index.cshtml" />
     <Content Include="Views\Logins\Index.cshtml" />
     <Content Include="Views\Asiakastapahtumat\Create.cshtml" />
+    <Content Include="Views\Asiakastiedot\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
