Asiakkaanperustiedot ja etusivu näkymän viimeistely

--- a/ProtoV1/ProtoV1/Web.config
+++ b/ProtoV1/ProtoV1/Web.config
@@ -58,7 +58,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="SenioritEntities" connectionString="metadata=res://*/Models.SenioritModel.csdl|res://*/Models.SenioritModel.ssdl|res://*/Models.SenioritModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-FPIQRNQ9\SQLEXSANNARA;initial catalog=Seniorit;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SenioritEntities" connectionString="metadata=res://*/Models.SenioritModel.csdl|res://*/Models.SenioritModel.ssdl|res://*/Models.SenioritModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-32TVTDOH\SQLEXTERHIFA;initial catalog=Seniorit;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
    </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
