Lisätty laskutustietoihin create-näkymä ja kommentoitu pois layoutista footer

--- a/ProtoV1/ProtoV1/ProtoV1.csproj
+++ b/ProtoV1/ProtoV1/ProtoV1.csproj
@@ -238,6 +238,7 @@
     <Content Include="Views\Asiakastapahtumat\Create.cshtml" />
     <Content Include="Views\Asiakastiedot\Create.cshtml" />
     <Content Include="Views\Etusivu\Details.cshtml" />
+    <Content Include="Views\Laskutustiedot\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
